# implement_gpt

./: README.md  file_test.py  get_tokenizer.py  gpt.py  gpt_andrej_version.py  pyproject.toml  tokenizer_tests.py  train.py  utils.py
configs/: base_config.py
ideas/: self_attention_weighted_aggregation.ipynb
