[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "notebook>=7.3.1",
  "tiktoken>=0.8.0",
  "torch==2.5.1+cu124 ; platform_system != 'Darwin'",
  "torchvision==0.20.1+cu124 ; platform_system != 'Darwin'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }
]
